# club-website

./: .gitattributes  .gitignore  Cargo.toml  Dioxus.toml  README.md  deploy.js  input.css  package-lock.json  package.json
.github/workflows/: deploy.yml
_deploy_tmp/: index.html  tailwind.css
_deploy_tmp/assets/: t4g-a3207ff5e4aaf06a.js  t4g-a3207ff5e4aaf06a.js.br  t4g_bg-446594914314ab65.wasm  t4g_bg-446594914314ab65.wasm.br  tailwind-27bf6bda0860154f.css  tailwind-27bf6bda0860154f.css.br
assets/: tailwind.css
assets/data/: events.json  info.json
src/: home.rs  main.rs  state.rs
src/components/: event_card.rs  event_list.rs  footer.rs  form.rs  hero.rs  mod.rs  navbar.rs
src/models/: event.rs  info_card.rs  mod.rs
src/pages/: about.rs  blog.rs  contact.rs  home.rs  mod.rs
